updated other location of code

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 	<meta property="og:title" content="Angular 2 HN" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://angular2-hn.firebaseapp.com/" />
+	<meta property="og:url" content="https://github.com/vairamsvsjdo/hackernews-ng2" />
 	<meta property="og:image" content="assets/images/logo-loading.png" />
 	<meta property="og:description" content="A Hacker News client built with Angular CLI, RxJS and Webpack" />
 	<meta property="og:site_name" content="Angular 2 HN" />
